--- a/src/components/HopitalList/Hospital.module.scss
+++ b/src/components/HopitalList/Hospital.module.scss
@@ -1,10 +1,12 @@
 .wrapper {
   padding: 20px;
   margin-top: 50px;
+  background-color:rgba(0, 204, 255, 0.048);
 }
 .header {
   display: flex;
   flex-direction: row;
+  
 }
 .statustype {
   &_option {
@@ -16,6 +18,7 @@
       position: static;
       transform: translateY(0);
       opacity: 0;
+      
     }
 
     &_selected {
@@ -25,6 +28,7 @@
         position: static;
         transform: translateY(0);
         opacity: 1;
+        
       }
     }
   }
@@ -40,6 +44,7 @@
 .hospital_filters {
   width: 25%;
   margin-bottom: 2.3rem;
+  background-color:rgba(255, 0, 0, 0.096);
 
   & > div {
     flex-basis: calc(100% / 2);
@@ -76,10 +81,11 @@
   }
 }
 .header_text {
-  font-size: 16px;
+  font-size: 18px;
   text-transform: uppercase;
-  color: gray;
+  color: rgba(17, 135, 204, 0.623);
   margin-bottom: 30px;
+  font-weight: bolder;
 }
 .fixed_pagination {
   position: fixed;
